ERROR FIX: figure e figcaption pegando text align justify ao invés de center corrigido.

--- a/assets/css/components/prose.component.css
+++ b/assets/css/components/prose.component.css
@@ -12,7 +12,7 @@
 /*
 	Sumário: text align left!
 */
-.prose :not(h1, h2, h3, h4, h5, h6, #c-sumario, #c-sumario *) {
+.prose :not(h1, h2, h3, h4, h5, h6, #c-sumario, #c-sumario *, figure, figcaption) {
 	text-align: justify;
 }
 
